--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Bateeq POS System</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
-    <!-- imported CSS are concatenated and added automatically -->
-  <link href="styles.css" rel="stylesheet"></head>
-  <body aurelia-app="main">
-    <div class="splash">
-      <div class="message">Bateeq POS System</div>
-      <i class="fa fa-spinner fa-spin"></i>
-    </div>
-    
-    <!-- Webpack Dev Server reload -->
-    <script src="/webpack-dev-server.js"></script>
-    
-  <script type="text/javascript" src="aurelia-bootstrap.bundle.js"></script><script type="text/javascript" src="aurelia.bundle.js"></script><script type="text/javascript" src="app.bundle.js"></script></body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>Bateeq POS System</title><meta name="viewport" content="width=device-width,initial-scale=1"><base href="/"><link href="styles.css" rel="stylesheet"></head><body aurelia-app="main"><div class="splash"><div class="message">Bateeq POS System</div><i class="fa fa-spinner fa-spin"></i></div><script type="text/javascript" src="aurelia-bootstrap.1a68cd1fe5086cea77eb.bundle.js"></script><script type="text/javascript" src="aurelia.e74b956ddd279c7e248a.bundle.js"></script><script type="text/javascript" src="app.53c0af02017eb204e943.bundle.js"></script></body></html>
